--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 aniso8601==8.0.0
 astroid==2.4.2
 attrs==19.3.0
@@ -7,6 +8,7 @@ dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.1.2
 Flask-Login==0.5.0
+Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 Flask-Testing==0.8.0
@@ -18,6 +20,7 @@ isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.4.0
@@ -27,6 +30,8 @@ py==1.9.0
 pylint==2.5.3
 pyparsing==2.4.7
 pytest==6.0.1
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.18
