--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ alembic==1.4.2
 aniso8601==8.0.0
 astroid==2.4.2
 attrs==19.3.0
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
+codecov==2.1.8
 coverage==5.2.1
 dnspython==2.0.0
 email-validator==1.1.1
@@ -33,9 +36,11 @@ pytest==6.0.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
+requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
+urllib3==1.25.10
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.3
