--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - coverage run --source="./src/" -m pytest
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
